--- a/tamduc/volumes/nginx/conf.d/tamduc.conf
+++ b/tamduc/volumes/nginx/conf.d/tamduc.conf
@@ -1,12 +1,5 @@
 server {
-    listen 80;
-    listen [::]:80;
-
-    server_name  dental_fe;
-    server_tokens off;
-
-    location / {
-        return 301 https://$host$request_uri;
-    }    
+    listen                  80;
+    server_name             dental_fe;
+    root                    /usr/share/nginx/html;
 }
-
