--- a/tamduc/docker-compose.yml
+++ b/tamduc/docker-compose.yml
@@ -1,6 +1,24 @@
 version: "2"
 
 services:
+  zookeeper:
+    container_name: zookeeper
+    image: zookeeper
+    ports:
+      - 2182:2181
+  kafka:
+    container_name: kafka
+    image: wurstmeister/kafka
+    ports:
+      - 9092:9092
+    environment:
+      KAFKA_BROKER_ID: 0
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://178.16.138.29:9092
+      KAFKA_CREATE_TOPICS: "go-chat-message:2:1"
+      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
+      KAFKA_LISTENERS: PLAINTEXT://0.0.0.0:9092
+    depends_on:
+      - zookeeper
   nginx:
     restart: always
     image: nginx
@@ -56,6 +74,8 @@ services:
     container_name: dental_fe
     volumes:
       - "./volumes/nginx/conf.d/:/etc/nginx/conf.d"
+    depends_on:
+      - kafka
     environment:
       - VIRTUAL_HOST=tamducsmile.tmdsoft.vn
       - VIRTUAL_NETWORK=nginx-proxy
