--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,4 +32,4 @@ jobs:
           cd /var/www/host-config/tamduc/src/DentalClinic_FE/
           git pull origin main
           cd /var/www/host-config
-          docker-compose up --build -d 
+          docker compose up --build -d 
