--- a/tamduc/volumes/nginx/conf.d/tamduc.conf
+++ b/tamduc/volumes/nginx/conf.d/tamduc.conf
@@ -2,4 +2,14 @@ server {
     listen                  80;
     server_name             dental_fe;
     root                    /usr/share/nginx/html;
+
+    location / {
+        proxy_set_header        Host             $host;
+        proxy_set_header        X-Real-IP        $remote_addr;
+        proxy_set_header        X-Forwarded-For  $proxy_add_x_forwarded_for;
+        proxy_set_header        Upgrade          $http_upgrade;
+        proxy_set_header        Connection       "upgrade";
+
+        try_files $uri $uri/ /index.html;
+    }
 }
