--- a/.github/workflows/ventures.yml
+++ b/.github/workflows/ventures.yml
@@ -19,4 +19,8 @@ jobs:
           username: ${{ secrets.SSH_USERNAME }}
           host: ${{ secrets.SSH_HOST }}
           password: ${{ secrets.SSH_PASSWORD }}
-          script: "cd /ctx/host-config/ventures && git pull && docker-compose up --build -d"
+          script: /
+            cd /ctx/host-config \
+            git pull \
+            cd /ventures \
+            docker-compose up --build -d
