--- a/.github/workflows/ventures.yml
+++ b/.github/workflows/ventures.yml
@@ -19,4 +19,6 @@ jobs:
           username: ${{ secrets.SSH_USERNAME }}
           host: ${{ secrets.SSH_HOST }}
           password: ${{ secrets.SSH_PASSWORD }}
-          script: "cd ~/ctx/host-config && git pull && cd /ventures && docker-compose up --build -d"
+          key: ${{ secrets.SSH_PRIVATE_KEY }}
+          port: 22
+          script: "cd ~/ctx/host-config && git pull && cd /ventures && docker compose up --build -d"
