--- a/ventures/docker-compose.yml
+++ b/ventures/docker-compose.yml
@@ -78,14 +78,14 @@ services:
     image: itvantoan/cb_ventures:staging
     container_name: ventures_staging
     pull_policy: always
-    volumes:
-      - ./volumes/web:/app
     environment:
       - VIRTUAL_HOST=ventures-staging.hvantoan.io.vn
       - VIRTUAL_NETWORK=nginx-proxy
       - VIRTUAL_PORT=5100
       - LETSENCRYPT_HOST=ventures-staging.hvantoan.io.vn
       - LETSENCRYPT_EMAIL=toan01473@gmail.com
+    ports:
+      - "5100:3000"
     networks:
       - app_network
 
@@ -94,14 +94,14 @@ services:
     image: itvantoan/cb_ventures:master
     container_name: ventures_master
     pull_policy: always
-    volumes:
-      - ./volumes/web:/app
     environment:
       - VIRTUAL_HOST=ventures.hvantoan.io.vn
       - VIRTUAL_NETWORK=nginx-proxy
       - VIRTUAL_PORT=5000
       - LETSENCRYPT_HOST=ventures.hvantoan.io.vn
       - LETSENCRYPT_EMAIL=toan01473@gmail.com
+    ports:
+      - "5000:3000"
     networks:
       - app_network
 
