--- a/ventures/docker-compose.yml
+++ b/ventures/docker-compose.yml
@@ -25,14 +25,14 @@ services:
     container_name: pgadmin
     image: dpage/pgadmin4
     environment:
-      - PGADMIN_DEFAULT_EMAIL=${PGADMIN_DEFAULT_EMAIL:-it.vantoan@gmail.com}
-      - PGADMIN_DEFAULT_PASSWORD=${PGADMIN_DEFAULT_PASSWORD:-12345678x@X}
-      - PGADMIN_CONFIG_SERVER_MODE=True
-      - VIRTUAL_HOST=pgadmin.hvantoan.io.vn
-      - VIRTUAL_NETWORK=nginx-proxy
-      - VIRTUAL_PORT=5050
-      - LETSENCRYPT_HOST=pgadmin.hvantoan.io.vn
-      - LETSENCRYPT_EMAIL=toan01473@gmail.com
+      PGADMIN_DEFAULT_EMAIL: ${PGADMIN_DEFAULT_EMAIL:-it.vantoan@gmail.com}
+      PGADMIN_DEFAULT_PASSWORD: ${PGADMIN_DEFAULT_PASSWORD:-12345678x@X}
+      PGADMIN_CONFIG_SERVER_MODE: "True"
+      VIRTUAL_HOST: pgadmin.hvantoan.io.vn
+      VIRTUAL_NETWORK: nginx-proxy
+      VIRTUAL_PORT: 5050
+      LETSENCRYPT_HOST: pgadmin.hvantoan.io.vn
+      LETSENCRYPT_EMAIL: toan01473@gmail.com
     ports:
       - "5050:80"
     volumes:
