--- a/ventures/docker-compose.yml
+++ b/ventures/docker-compose.yml
@@ -1,6 +1,34 @@
 version: "3.8"
 
 services:
+  ftp:
+    restart: always
+    container_name: ftpd-server
+    image: stilliard/pure-ftpd:hardened
+    depends_on:
+      - wordpress
+    ports:
+      - 21:21
+      - 20:20
+      - 30000-30009:30000-30009
+    volumes:
+      - ./volumes/ftp/user:/home/user/:rw
+      - './ftp/pass:/etc/pure-ftpd/passwd'
+    environment:
+      PUBLICHOST: "5.181.217.245"
+      FTP_USER_NAME: "ftp"
+      FTP_USER_PASS: "ftp"
+      FTP_USER_HOME: "/home/user"
+      FTP_USER_UID: 33
+      FTP_USER_GID: 33
+      ADDED_FLAGS: "--tls=2"
+      TLS_CN: "**** FTP"
+      TLS_ORG: "*****"
+      TLS_C: "VI"
+      MAX_CONNECTIONS: "20"
+    networks:
+      - app_network
+
   postgres:
     image: postgres:15-alpine
     container_name: postgres
@@ -17,26 +45,6 @@ services:
       - ./volumes/postgresql:/var/lib/postgresql/data
     ports:
       - "5432:5432"
-    networks:
-      - app_network
-    restart: on-failure
-
-  pgadmin:
-    container_name: pgadmin
-    image: dpage/pgadmin4
-    environment:
-      PGADMIN_DEFAULT_EMAIL: ${PGADMIN_DEFAULT_EMAIL:-it.vantoan@gmail.com}
-      PGADMIN_DEFAULT_PASSWORD: ${PGADMIN_DEFAULT_PASSWORD:-12345678x@X}
-      PGADMIN_CONFIG_SERVER_MODE: "True"
-      VIRTUAL_HOST: pgadmin.hvantoan.io.vn
-      VIRTUAL_NETWORK: nginx-proxy
-      VIRTUAL_PORT: 5050
-      LETSENCRYPT_HOST: pgadmin.hvantoan.io.vn
-      LETSENCRYPT_EMAIL: toan01473@gmail.com
-    ports:
-      - "5050:80"
-    volumes:
-      - ./volumes/pgadmin:/var/lib/pgadmin
     networks:
       - app_network
     restart: on-failure
