--- a/ventures/docker-compose.yml
+++ b/ventures/docker-compose.yml
@@ -1,4 +1,4 @@
-version: "3.8"
+version: "3.9"
 
 services:
   ftp:
@@ -31,6 +31,11 @@ services:
       TLS_ORG: "*****"
       TLS_C: "VI"
       MAX_CONNECTIONS: "20"
+    deploy:
+      resources:
+        limits:
+          cpus: '0.5'
+          memory: '256M'
     networks:
       - app_network
 
@@ -50,6 +55,11 @@ services:
       - ./volumes/postgresql:/var/lib/postgresql/data
     ports:
       - "5432:5432"
+    deploy:
+      resources:
+        limits:
+          cpus: '1'
+          memory: '512M'
     networks:
       - app_network
     restart: on-failure
@@ -66,6 +76,11 @@ services:
       - "/etc/nginx/vhost.d"
       - "/usr/share/nginx/html"
       - "./volumes/proxy/certs:/etc/nginx/certs:ro"
+    deploy:
+      resources:
+        limits:
+          cpus: '0.5'
+          memory: '128M'
     networks:
       - app_network
 
@@ -79,6 +94,11 @@ services:
     volumes_from:
       - nginx
     entrypoint: /usr/local/bin/docker-gen -notify-sighup nginx -watch -wait 5s:30s /etc/docker-gen/templates/nginx.tmpl /etc/nginx/conf.d/default.conf
+    deploy:
+      resources:
+        limits:
+          cpus: '0.5'
+          memory: '64M'
     networks:
       - app_network
 
@@ -93,6 +113,11 @@ services:
       - "./volumes/proxy/certs:/etc/nginx/certs:rw"
     environment:
       - NGINX_DOCKER_GEN_CONTAINER=nginx-gen
+    deploy:
+      resources:
+        limits:
+          cpus: '0.5'
+          memory: '64M'
     networks:
       - app_network
 
@@ -109,6 +134,10 @@ services:
       - LETSENCRYPT_EMAIL=toan01473@gmail.com
     ports:
       - "5100:3000"
+    deploy:
+      resources:
+        limits:
+          cpus: '1'
     networks:
       - app_network
 
@@ -125,6 +154,10 @@ services:
       - LETSENCRYPT_EMAIL=toan01473@gmail.com
     ports:
       - "5000:3000"
+    deploy:
+      resources:
+        limits:
+          cpus: '1'
     networks:
       - app_network
 
