Fix: cmd when redeloy
- Can not limit resource when not using docker swarm
- Update limit resource for web

--- a/ventures/docker-compose.yml
+++ b/ventures/docker-compose.yml
@@ -129,6 +129,10 @@ services:
       - LETSENCRYPT_EMAIL=toan01473@gmail.com
     ports:
       - "5000:3000"
+    deploy:
+      resources:
+        limits:
+          cpus: '0.7'
     networks:
       - app_network
 
