Fix: add /.well-known/acme-challenge/ ngnix

--- a/ventures/volumes/nginx/conf.d/ventures.conf
+++ b/ventures/volumes/nginx/conf.d/ventures.conf
@@ -3,6 +3,10 @@ server {
     server_name             ventures;
     root                    /usr/share/nginx/html;
 
+    location /.well-known/acme-challenge/ {
+        root /usr/share/nginx/html;
+    }
+
     location / {
         proxy_set_header        Host             $host;
         proxy_set_header        X-Real-IP        $remote_addr;
