Fix: Update the SSL certificate with a new container.

--- a/ventures/docker-compose.yml
+++ b/ventures/docker-compose.yml
@@ -1,6 +1,24 @@
 version: "3.8"
 
 services:
+  nginx-proxy:
+    image: jwilder/nginx-proxy
+    ports:
+      - "80:80"
+      - "443:443"
+    volumes:
+      - "/etc/nginx/vhost.d"
+      - "/usr/share/nginx/html"
+      - "/var/run/docker.sock:/tmp/docker.sock:ro"
+      - "/etc/nginx/certs"
+
+  letsencrypt-nginx-proxy-companion:
+    image: jrcs/letsencrypt-nginx-proxy-companion
+    volumes:
+      - "/var/run/docker.sock:/var/run/docker.sock:ro"
+    volumes_from:
+      - "nginx-proxy"
+
   ftp:
     restart: always
     container_name: ftpd-server
@@ -15,8 +33,6 @@ services:
     environment:
       # SSL Configuration
       VIRTUAL_HOST: ftp.hvantoan.io.vn
-      VIRTUAL_NETWORK: nginx-proxy
-      VIRTUAL_PORT: 5432
       LETSENCRYPT_HOST: ftp.hvantoan.io.vn
       LETSENCRYPT_EMAIL: toan01473@gmail.com
       # FTP Configuration
@@ -38,14 +54,12 @@ services:
     image: postgres:15-alpine
     container_name: postgres
     environment:
-      - POSTGRES_USER=postgres
-      - POSTGRES_PASSWORD=postgres
-      - POSTGRES_DB=ventures
-      - VIRTUAL_HOST=database.hvantoan.io.vn
-      - VIRTUAL_NETWORK=nginx-proxy
-      - VIRTUAL_PORT=5432
-      - LETSENCRYPT_HOST=database.hvantoan.io.vn
-      - LETSENCRYPT_EMAIL=toan01473@gmail.com
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
+      POSTGRES_DB: ventures
+      VIRTUAL_HOST: database.hvantoan.io.vn
+      LETSENCRYPT_HOST: database.hvantoan.io.vn
+      LETSENCRYPT_EMAIL: toan01473@gmail.com
     volumes:
       - ./volumes/postgresql:/var/lib/postgresql/data
     ports:
@@ -54,59 +68,15 @@ services:
       - app_network
     restart: on-failure
 
-  nginx:
-    restart: always
-    image: nginx
-    container_name: nginx
-    ports:
-      - "80:80"
-      - "443:443"
-    volumes:
-      - "/etc/nginx/conf.d"
-      - "/etc/nginx/vhost.d"
-      - "/usr/share/nginx/html"
-      - "./volumes/proxy/certs:/etc/nginx/certs:ro"
-    networks:
-      - app_network
-
-  nginx-gen:
-    restart: always
-    image: jwilder/docker-gen
-    container_name: nginx-gen
-    volumes:
-      - "/var/run/docker.sock:/tmp/docker.sock:ro"
-      - "./volumes/proxy/templates/nginx.tmpl:/etc/docker-gen/templates/nginx.tmpl:ro"
-    volumes_from:
-      - nginx
-    entrypoint: /usr/local/bin/docker-gen -notify-sighup nginx -watch -wait 5s:30s /etc/docker-gen/templates/nginx.tmpl /etc/nginx/conf.d/default.conf
-    networks:
-      - app_network
-
-  letsencrypt-nginx-proxy-companion:
-    restart: always
-    image: jrcs/letsencrypt-nginx-proxy-companion
-    container_name: letsencrypt-nginx-proxy-companion
-    volumes_from:
-      - nginx
-    volumes:
-      - "/var/run/docker.sock:/var/run/docker.sock:ro"
-      - "./volumes/proxy/certs:/etc/nginx/certs:rw"
-    environment:
-      - NGINX_DOCKER_GEN_CONTAINER=nginx-gen
-    networks:
-      - app_network
-
   master:
     restart: always
     image: itvantoan/cb_ventures:master
     container_name: ventures_master
     pull_policy: always
     environment:
-      - VIRTUAL_HOST=ventures.hvantoan.io.vn
-      - VIRTUAL_NETWORK=nginx-proxy
-      - VIRTUAL_PORT=5000
-      - LETSENCRYPT_HOST=ventures.hvantoan.io.vn
-      - LETSENCRYPT_EMAIL=toan01473@gmail.com
+      VIRTUAL_HOST: ventures.hvantoan.io.vn
+      LETSENCRYPT_HOST: ventures.hvantoan.io.vn
+      LETSENCRYPT_EMAIL: toan01473@gmail.com
     ports:
       - "5000:3000"
     deploy:
