--- a/ventures/docker-compose.yml
+++ b/ventures/docker-compose.yml
@@ -11,6 +11,8 @@ services:
       - "/usr/share/nginx/html"
       - "/var/run/docker.sock:/tmp/docker.sock:ro"
       - "/etc/nginx/certs"
+    networks:
+      - app_network
 
   letsencrypt-nginx-proxy-companion:
     image: jrcs/letsencrypt-nginx-proxy-companion
@@ -18,6 +20,8 @@ services:
       - "/var/run/docker.sock:/var/run/docker.sock:ro"
     volumes_from:
       - "nginx-proxy"
+    networks:
+      - app_network
 
   ftp:
     restart: always
