--- a/.github/workflows/nginx.yml
+++ b/.github/workflows/nginx.yml
@@ -1,10 +1,10 @@
-name: CD Ventures Project
+name: CD Nginx Proxy
 
 on:
   push:
     branches: [main]
     paths:
-      - 'ventures/**'
+      - 'nginx/**'
 
 jobs:
   deploy:
@@ -25,4 +25,4 @@ jobs:
           username: ${{ secrets.SSH_USERNAME }}
           password: ${{ secrets.SSH_PASSWORD }}
           port: 22
-          script: "eval `ssh-agent -s` && ssh-add ~/.ssh/github && cd ~/ctx/host-config && git pull && cd ventures && docker compose up --remove-orphans --build -d"
+          script: "eval `ssh-agent -s` && ssh-add ~/.ssh/github && cd ~/ctx/host-config && git pull && cd nginx && docker compose up --remove-orphans --build -d"
