--- a/ventures/docker-compose.yml
+++ b/ventures/docker-compose.yml
@@ -1,27 +1,27 @@
 version: "3.9"
 
 services:
-  # nginx-proxy:
-  #   image: jwilder/nginx-proxy
-  #   ports:
-  #     - "80:80"
-  #     - "443:443"
-  #   volumes:
-  #     - "/etc/nginx/vhost.d"
-  #     - "/usr/share/nginx/html"
-  #     - "/var/run/docker.sock:/tmp/docker.sock:ro"
-  #     - "/etc/nginx/certs"
-  #   networks:
-  #     - app_network
+  nginx-proxy:
+    image: jwilder/nginx-proxy
+    ports:
+      - "80:80"
+      - "443:443"
+    volumes:
+      - "/etc/nginx/vhost.d"
+      - "/usr/share/nginx/html"
+      - "/var/run/docker.sock:/tmp/docker.sock:ro"
+      - "/etc/nginx/certs"
+    networks:
+      - app_network
 
-  # letsencrypt-nginx-proxy-companion:
-  #   image: jrcs/letsencrypt-nginx-proxy-companion
-  #   volumes:
-  #     - "/var/run/docker.sock:/var/run/docker.sock:ro"
-  #   volumes_from:
-  #     - "nginx-proxy"
-  #   networks:
-  #     - app_network
+  letsencrypt-nginx-proxy-companion:
+    image: jrcs/letsencrypt-nginx-proxy-companion
+    volumes:
+      - "/var/run/docker.sock:/var/run/docker.sock:ro"
+    volumes_from:
+      - "nginx-proxy"
+    networks:
+      - app_network
 
   ftp:
     restart: always
@@ -88,10 +88,21 @@ services:
     container_name: cb_ventures
     pull_policy: always
     environment:
+      NEXTAUTH_SECRET: ${NEXTAUTH_SECRET}
+      NEXTAUTH_URL: ${NEXTAUTH_URL}
+      DISCORD_CLIENT_ID: ${DISCORD_CLIENT_ID}
+      DISCORD_CLIENT_SECRET: ${DISCORD_CLIENT_SECRET}
+      GOOGLE_ID: ${GOOGLE_ID}
+      GOOGLE_SECRET: ${GOOGLE_SECRET}
+      API_ENDPOINT: ${API_ENDPOINT}
+      NEXT_TELEMETRY_DISABLED: 1
+      # SSL Configuration
       VIRTUAL_HOST: ventures.hvantoan.io.vn
       LETSENCRYPT_HOST: ventures.hvantoan.io.vn
     ports:
-      - "5000:3000"
+      - "3000:3000"
+    env_file:
+      - .env
     deploy:
       resources:
         limits:
