--- a/ventures/.env
+++ b/ventures/.env
@@ -1,5 +1,5 @@
 NEXTAUTH_SECRET=vantoanvantoanvantoan
-NEXTAUTH_URL=http://localhost:3000
+NEXTAUTH_URL=https://ventures.hvantoan.io.vn
 DISCORD_CLIENT_ID=1263685207291334666
 DISCORD_CLIENT_SECRET=_T0FJmMn5UDllcRdlQ6nCGIilkXOqMrR
 GOOGLE_ID=521305244575-jfj3unj0nb5mpsr6k4vf4gcald1u82rm.apps.googleusercontent.com
