Fix: Edit File change

--- a/.github/workflows/apps.yml
+++ b/.github/workflows/apps.yml
@@ -1,10 +1,10 @@
-name: CD Ventures Project
+name: CD Apps
 
 on:
   push:
     branches: [main]
     paths:
-      - 'ventures/**'
+      - 'ventures/apps/**'
 
 jobs:
   deploy:
