--- a/ventures/data-center/docker-compose.yml
+++ b/ventures/data-center/docker-compose.yml
@@ -61,7 +61,8 @@ services:
       - nginx-proxy
 
   redis:
-    image: 'bitnami/redis:latest'
+    image: docker.io/bitnami/redis:7.4
+    container_name: redis_dc
     environment:
       - REDIS_PASSWORD=vantoan # Set your Redis password here
       - REDIS_DISABLE_COMMANDS=FLUSHDB,FLUSHALL
