--- a/ventures/apps/docker-compose.yml
+++ b/ventures/apps/docker-compose.yml
@@ -3,18 +3,13 @@ version: "3.9"
 services:
   master:
     restart: always
-    image: itvantoan/cb_ventures:master
+    image: itvantoan/cb_ventures:production
     container_name: cb_ventures
     pull_policy: always
     environment:
-      NEXTAUTH_SECRET: ${NEXTAUTH_SECRET}
+      API_URL: ${API_URL}
       NEXTAUTH_URL: ${NEXTAUTH_URL}
-      DISCORD_CLIENT_ID: ${DISCORD_CLIENT_ID}
-      DISCORD_CLIENT_SECRET: ${DISCORD_CLIENT_SECRET}
-      GOOGLE_ID: ${GOOGLE_ID}
-      GOOGLE_SECRET: ${GOOGLE_SECRET}
-      API_ENDPOINT: ${API_ENDPOINT}
-      NEXT_TELEMETRY_DISABLED: 1
+      NEXTAUTH_SECRET: ${NEXTAUTH_SECRET}
       # SSL Configuration
       VIRTUAL_HOST: ventures.hvantoan.io.vn
       LETSENCRYPT_HOST: ventures.hvantoan.io.vn
@@ -28,6 +23,7 @@ services:
           cpus: '0.7'
     networks:
       - nginx-proxy
+
   api:
     restart: always
     image: itvantoan/ventures_be:master
