--- a/.github/workflows/data-center.yml
+++ b/.github/workflows/data-center.yml
@@ -25,4 +25,4 @@ jobs:
           username: ${{ secrets.SSH_USERNAME }}
           password: ${{ secrets.SSH_PASSWORD }}
           port: 22
-          script: "eval `ssh-agent -s` && ssh-add ~/.ssh/github && cd ~/ctx/host-config && git pull && cd data-center && docker compose up --remove-orphans --build -d"
+          script: "eval `ssh-agent -s` && ssh-add ~/.ssh/github && cd ~/ctx/host-config && git pull && cd data-center && docker compose up --remove-orphans -d"
