Fix: test service

--- a/apps/production/appsettings.json
+++ b/apps/production/appsettings.json
@@ -1,25 +1,32 @@
 {
-    "Logging": {
-        "LogLevel": {
-            "Default": "Information",
-            "Microsoft.AspNetCore": "Warning"
-        }
-    },
-    "AllowedHosts": "*",
-    "ConnectionStrings": {
-        "CBContext": "User ID=postgres;Password=postgres;Server=database.hvantoan.io.vn;Port=5432;Database=ventures_production;Pooling=true;"
-    },
-    "Authentication": {
-        "Google": {
-            "ClientId": "521305244575-jfj3unj0nb5mpsr6k4vf4gcald1u82rm.apps.googleusercontent.com",
-            "ClientSecret": "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"
-        }
-    },
-    "Redis": {
-        "Host": "redis.dc.hvantoan.io.vn",
-        "Port": 6379,
-        "Password": "vantoan@123"
-    },
-    "JwtSecret": "wSVKmC5epFeIqSMZ8eZssrW0FZwMJdVs",
-    "TokenExpire": 1
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft.AspNetCore": "Warning"
+    }
+  },
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "CBContext": "User ID=postgres;Password=postgres;Server=database.hvantoan.io.vn;Port=5432;Database=ventures_production;Pooling=true;"
+  },
+  "ImageUrl": "https://ftp.hvantoan.io.vn",
+  "Authentication": {
+    "Google": {
+      "ClientId": "521305244575-jfj3unj0nb5mpsr6k4vf4gcald1u82rm.apps.googleusercontent.com",
+      "ClientSecret": "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"
+    }
+  },
+  "Redis": {
+    "Host": "redis.dc.hvantoan.io.vn",
+    "Port": 6379,
+    "Password": "vantoan@123"
+  },
+  "Ftp": {
+    "Host": "5.181.217.245",
+    "Username": "ftp",
+    "Password": "ftp",
+    "Port": 21
+  },
+  "JwtSecret": "wSVKmC5epFeIqSMZ8eZssrW0FZwMJdVs",
+  "TokenExpire": 1
 }
