--- a/jaeger/docker-compose.yml
+++ b/jaeger/docker-compose.yml
@@ -9,8 +9,8 @@ services:
       - COLLECTOR_ZIPKIN_HTTP_PORT=9411
       - COLLECTOR_OTLP_ENABLED=true
       # SSL Configuration
-      - VIRTUAL_HOST=jaeger.hvantoan.io.vn
-      - LETSENCRYPT_HOST=jaeger.hvantoan.io.vn
+      - VIRTUAL_HOST=jaeger-dc.hvantoan.io.vn
+      - LETSENCRYPT_HOST=jaeger-dc.hvantoan.io.vn
       - VIRTUAL_PORT=16686
     ports:
       - 6831:6831/udp
