--- a/data-center/docker-compose.yml
+++ b/data-center/docker-compose.yml
@@ -6,25 +6,24 @@ services:
     container_name: ftpd-server
     image: stilliard/pure-ftpd:hardened
     ports:
-      - 21:21
-      - 20:20
-      - 30000-30009:30000-30009
+      - "21:21"
+      - "20:20"
+      - "30000-30009:30000-30009"
     volumes:
       - "./volumes/ftp/user:/home/user/:rw"
       - "./volumes/ftp/pass:/etc/pure-ftpd/passwd"
-      - "/var/ftp:/home/user:rw"
     environment:
       # SSL Configuration
-      VIRTUAL_HOST: ftp-dc.hvantoan.io.vn
-      LETSENCRYPT_HOST: ftp-dc.hvantoan.io.vn
+      VIRTUAL_HOST: ftp.dc.hvantoan.io.vn
+      LETSENCRYPT_HOST: ftp.dc.hvantoan.io.vn
       # FTP Configuration
-      PUBLICHOST: "ftp-dc.hvantoan.io.vn"
+      PUBLICHOST: "ftp.dc.hvantoan.io.vn"
       FTP_USER_NAME: "ftp"
       FTP_USER_PASS: "ftp"
       FTP_USER_HOME: "/home/user"
       FTP_USER_UID: 33
       FTP_USER_GID: 33
-      ADDED_FLAGS: "--tls=2 --createhomedir"
+      ADDED_FLAGS: "--tls=2"
       TLS_CN: "**** FTP"
       TLS_ORG: "*****"
       TLS_C: "VI"
@@ -41,8 +40,8 @@ services:
       POSTGRES_PASSWORD: postgres
       POSTGRES_DB: ventures
       # SSL Configuration
-      VIRTUAL_HOST: database-dc.hvantoan.io.vn
-      LETSENCRYPT_HOST: database-dc.hvantoan.io.vn
+      VIRTUAL_HOST: database.dc.hvantoan.io.vn
+      LETSENCRYPT_HOST: database.dc.hvantoan.io.vn
     volumes:
       - ./volumes/postgresql:/var/lib/postgresql/data
     ports:
@@ -59,8 +58,8 @@ services:
     container_name: redis_dc
     command: redis-server /usr/local/etc/redis/redis.conf
     environment:
-      - VIRTUAL_HOST=redis-dc.hvantoan.io.vn
-      - LETSENCRYPT_HOST=redis-dc.hvantoan.io.vn
+      - VIRTUAL_HOST=redis.dc.hvantoan.io.vn
+      - LETSENCRYPT_HOST=redis.dc.hvantoan.io.vn
     ports:
       - "6379:6379"
     volumes:
