--- a/apps/production/appsettings.json
+++ b/apps/production/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "CBContext": "User ID=postgres;Password=postgres;Server=database.hvantoan.io.vn;Port=5432;Database=ventures_production;Pooling=true;"
+    "CBContext": "User ID=postgres;Password=postgres;Server=database.dc.hvantoan.io.vn;Port=5432;Database=ventures_production;Pooling=true;"
   },
   "ImageUrl": "https://ftp.hvantoan.io.vn",
   "Authentication": {
