--- a/nginx/docker-compose.yml
+++ b/nginx/docker-compose.yml
@@ -8,6 +8,7 @@ services:
       - "443:443"
     volumes:
       - /var/run/docker.sock:/tmp/docker.sock:ro
+      - ./config/ftp.conf:/etc/nginx/conf.d/ftp.conf:ro
       - letsencrypt-certs:/etc/nginx/certs
       - letsencrypt-vhost-d:/etc/nginx/vhost.d
       - letsencrypt-html:/usr/share/nginx/html
