--- a/nginx/config/ftp.conf
+++ b/nginx/config/ftp.conf
@@ -3,7 +3,7 @@ server {
     server_name ftp.dc.hvantoan.io.vn;
 
     location /images/ {
-        alias /root/ctx/host-config/data-center/volumes/ftp/user/images/;  # Đường dẫn tới thư mục hình ảnh
+        alias /var/html/images/;  # Đường dẫn tới thư mục hình ảnh
         autoindex on;              # Kích hoạt liệt kê thư mục
         autoindex_exact_size off;  # Hiển thị kích thước file dạng Kb, Mb, v.v.
         autoindex_localtime on;    # Hiển thị thời gian địa phương thay vì UTC
