--- a/nginx/docker-compose.yml
+++ b/nginx/docker-compose.yml
@@ -9,6 +9,7 @@ services:
     volumes:
       - /var/run/docker.sock:/tmp/docker.sock:ro
       - ./config/ftp.conf:/etc/nginx/conf.d/ftp.conf:ro
+      - ../data-center/volumes/ftp/user/images:/var/html/images:ro
       - letsencrypt-certs:/etc/nginx/certs
       - letsencrypt-vhost-d:/etc/nginx/vhost.d
       - letsencrypt-html:/usr/share/nginx/html
