--- a/nginx/config/ftp.conf
+++ b/nginx/config/ftp.conf
@@ -1,11 +1,14 @@
 server {
     listen 80;
+    listen 443 ssl;
     server_name hvantoan.io.vn;
 
+    ssl_certificate /etc/nginx/certs/hvantoan.io.vn.crt;
+    ssl_certificate_key /etc/nginx/certs/hvantoan.io.vn.key;
+    include /etc/nginx/vhost.d/default;
+
     location /images/ {
-        alias /usr/share/nginx/html/images/;  # Đường dẫn tới thư mục hình ảnh
-        autoindex on;              # Kích hoạt liệt kê thư mục
-        autoindex_exact_size off;  # Hiển thị kích thước file dạng Kb, Mb, v.v.
-        autoindex_localtime on;    # Hiển thị thời gian địa phương thay vì UTC
+        alias /usr/share/nginx/html/images/;  # Thư mục mount từ FTP vào Nginx
+        autoindex on;                         # Hiển thị danh sách file trong thư mục
     }
 }
