--- a/data-center/docker-compose.yml
+++ b/data-center/docker-compose.yml
@@ -30,12 +30,12 @@ services:
     environment:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
-      POSTGRES_DB: ventures
+      PGDATA: /var/lib/postgresql/data/
       # SSL Configuration
       VIRTUAL_HOST: database.dc.hvantoan.io.vn
       LETSENCRYPT_HOST: database.dc.hvantoan.io.vn
     volumes:
-      - /volumes/postgresql:/var/lib/postgresql/data
+      - /volumes/postgresql:/var/lib/postgresql/data/:rw
     ports:
       - "5432:5432"
     deploy:
