--- a/apps/docker-compose.yml
+++ b/apps/docker-compose.yml
@@ -10,13 +10,17 @@ services:
       API_URL: ${API_URL}
       NEXTAUTH_URL: ${NEXTAUTH_URL}
       NEXTAUTH_SECRET: ${NEXTAUTH_SECRET}
+      GOOGLE_CLIENT_ID: ${GOOGLE_CLIENT_ID}
+      GOOGLE_CLIENT_SECRET: ${GOOGLE_CLIENT_SECRET}
+      GITHUB_ID: ${GITHUB_ID}
+      GITHUB_SECRET: ${GITHUB_SECRET}
       # SSL Configuration
       VIRTUAL_HOST: ventures.hvantoan.io.vn
       LETSENCRYPT_HOST: ventures.hvantoan.io.vn
     ports:
       - "3000:3000"
     env_file:
-      - ./production/.env
+      - .env
     networks:
       - nginx-proxy
 
