--- a/data-center/docker-compose.yml
+++ b/data-center/docker-compose.yml
@@ -41,6 +41,7 @@ services:
     deploy:
       resources:
         limits:
+          cpus: "0.3"
           memory: 512M
     networks:
       - nginx-proxy
