Fix: production data

--- a/apps/production/appsettings.json
+++ b/apps/production/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "CBContext": "User ID=postgres;Password=postgres;Server=5.181.217.245;Port=5432;Database=ventures_production;Pooling=true;"
+    "CBContext": "User ID=ventures;Password=123456789x@X;Server=5.181.217.245;Port=5432;Database=ventures_production;Pooling=true;"
   },
   "ImageUrl": "https://ventures.dc.hvantoan.io.vn",
   "Authentication": {
