--- a/data-center/docker-compose.yml
+++ b/data-center/docker-compose.yml
@@ -34,8 +34,8 @@ services:
     restart: always
     environment:
       POSTGRES_DB: ventures
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: postgres
+      POSTGRES_USER: ventures
+      POSTGRES_PASSWORD: 123456789x@X
     ports:
       - 5432:5432
     volumes:
