--- a/data-center/docker-compose.yml
+++ b/data-center/docker-compose.yml
@@ -39,7 +39,7 @@ services:
     ports:
       - 5432:5432
     volumes:
-      - ~/apps/postgres:/var/lib/postgresql/data
+      - /volumes/postgres:/var/lib/postgresql/data
     deploy:
       resources:
         limits:
@@ -62,9 +62,6 @@ services:
       - ./redis.conf:/usr/local/etc/redis/redis.conf
     networks:
       - nginx-proxy
-
-volumes:
-  postgres_data:
 
 networks:
   nginx-proxy:
