--- a/.github/workflows/jaeger.yml
+++ b/.github/workflows/jaeger.yml
@@ -4,7 +4,7 @@ on:
   push:
     branches: [main]
     paths:
-      - 'jaeger/**'
+      - "jaeger/**"
 
 jobs:
   deploy:
@@ -25,4 +25,10 @@ jobs:
           username: ${{ secrets.SSH_USERNAME }}
           password: ${{ secrets.SSH_PASSWORD }}
           port: 22
-          script: "eval `ssh-agent -s` && ssh-add ~/.ssh/github && cd ~/ctx/host-config && git pull && cd jaeger && docker compose up --remove-orphans -d"
+          script: |
+            eval `ssh-agent -s`
+            ssh-add ~/.ssh/github
+            cd ~/ctx/host-config
+            git pull
+            cd jaeger
+            docker compose up --remove-orphans -d
