--- a/.github/workflows/nginx.yml
+++ b/.github/workflows/nginx.yml
@@ -4,7 +4,7 @@ on:
   push:
     branches: [main]
     paths:
-      - 'nginx/**'
+      - "nginx/**"
 
 jobs:
   deploy:
@@ -18,11 +18,17 @@ jobs:
       - name: Login to GitHub
         uses: actions/checkout@v2
 
-      - name: Rebuild NGNIX
+      - name: Rebuild NGINX
         uses: appleboy/ssh-action@master
         with:
           host: ${{ secrets.SSH_HOST }}
           username: ${{ secrets.SSH_USERNAME }}
           password: ${{ secrets.SSH_PASSWORD }}
           port: 22
-          script: "eval `ssh-agent -s` && ssh-add ~/.ssh/github && cd ~/ctx/host-config && git pull && cd nginx && docker compose up --remove-orphans -d"
+          script: |
+            eval `ssh-agent -s`
+            ssh-add ~/.ssh/github
+            cd ~/ctx/host-config
+            git pull
+            cd nginx
+            docker compose up --remove-orphans -d
