--- a/nginx/config/ftp.conf
+++ b/nginx/config/ftp.conf
@@ -1,6 +1,7 @@
 server {
     listen 80;
-    listen 443 ssl;
+    listen 443;
+    #ssl    on;
     server_name hvantoan.io.vn;
 
     location /images/ {
