--- a/nginx/docker-compose.yml
+++ b/nginx/docker-compose.yml
@@ -29,7 +29,7 @@ services:
       - vhost:/etc/nginx/vhost.d
       - letsencrypt-html:/usr/share/nginx/html
     environment:
-      - DEFAULT_EMAIL=toan01473@gmail.com
+      - DEFAULT_EMAIL=it.vantoan@gmail.com
       - NGINX_PROXY_CONTAINER=nginx-proxy
     networks:
       - nginx-proxy
