--- a/vpn/docker-compose.yml
+++ b/vpn/docker-compose.yml
@@ -1,4 +1,4 @@
-version: "3.8"  # Sử dụng version 3.8 của Docker Compose
+version: "3.8"
 
 services:
   wireguard:
@@ -10,16 +10,17 @@ services:
     environment:
       - PUID=1000
       - PGID=1000
-      - TZ=Asia/Ho_Chi_Minh  # Chỉnh sửa lại Asia/Ho_Chi_Minh cho đúng
-      - SERVERURL=vpn.hvantoan.io.vn #optional
-      - SERVERPORT=51820 #optional
-      - PEERS=4 #optional
-      - PEERDNS=auto #optional
-      - INTERNAL_SUBNET=10.10.100.0 #optional
+      - TZ=Asia/Ho_Chi_Minh
+      - SERVERURL=vpn.hvantoan.io.vn
+      - SERVERPORT=51820
+      - PEERS=4
+      - PEERDNS=auto
+      - INTERNAL_SUBNET=10.10.100.0
       # SSL Configuration
       - VIRTUAL_HOST=vpn.hvantoan.io.vn
       - LETSENCRYPT_HOST=vpn.hvantoan.io.vn
-      - VIRTUAL_PORT=51820                # Cổng VPN
+
+      - VIRTUAL_PORT=51820 # Cổng VPN
     volumes:
       - ./config:/config
       - /lib/modules:/lib/modules
