--- a/.github/workflows/apps.yml
+++ b/.github/workflows/apps.yml
@@ -11,11 +11,6 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
-      - name: Login to Docker Hub
-        uses: docker/login-action@v3
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
       - name: Login to GitHub
         uses: actions/checkout@v2
 
@@ -32,4 +27,5 @@ jobs:
             cd ~/ctx/host-config
             git pull
             cd apps
+            docker login -u ${{ secrets.DOCKERHUB_USERNAME }} -p ${{ secrets.DOCKERHUB_PASSWORD }}
             docker compose up --remove-orphans -d
