--- a/nginx/config/ftp.conf
+++ b/nginx/config/ftp.conf
@@ -1,11 +1,11 @@
-server {
-    listen 80;
-    listen 443;
-    #ssl    on;
-    server_name hvantoan.io.vn;
+# server {
+#     listen 80;
+#     listen 443;
+#     #ssl    on;
+#     server_name hvantoan.io.vn;
 
-    location /images/ {
-        alias /usr/share/nginx/html/images/;  # Thư mục mount từ FTP vào Nginx
-        autoindex on;                         # Hiển thị danh sách file trong thư mục
-    }
-}
+#     location /images/ {
+#         alias /usr/share/nginx/html/images/;  # Thư mục mount từ FTP vào Nginx
+#         autoindex on;                         # Hiển thị danh sách file trong thư mục
+#     }
+# }
